--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hypnotizer</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <main>
-
+      <img src="painting.jpg" alt="The Persistence of Time" />
+      <section>
+          <h1>The Hypnotizer</h1>
+          <div class="inputs">
+              <input type="text" name="" id="">
+              <p>:</p>
+              <input type="text" name="" id="">
+              <button>START</button>
+          </div>
+      </section>
     </main>
-</body>
+  </body>
 </html>
