--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
     <main>
       <img src="painting.jpg" alt="The Persistence of Time" />
       <section>
-          <h1>The Hypnotizer</h1>
-          <div class="inputs">
-              <input type="text" name="" id="">
-              <p>:</p>
-              <input type="text" name="" id="">
-              <button>START</button>
-          </div>
+        <h1>The Hypnotizer</h1>
+        <div class="inputs">
+          <input type="text" name="" id="" />
+          <p>:</p>
+          <input type="text" name="" id="" />
+        </div>
+        <div class="btn">
+          <button>start</button>
+        </div>
       </section>
     </main>
   </body>
