Modal HTML & CSS

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <main>
       <img src="painting.jpg" alt="The Persistence of Time" />
-      <section>
+      <section class="main">
         <h1>The Hypnotizer</h1>
         <div class="inputs">
           <input type="text" name="" id="" />
@@ -19,6 +19,15 @@
         </div>
         <div class="btn">
           <button>start</button>
+        </div>
+      </section>
+      <section class="modal">
+        <div class="x">X</div>
+        <div class="clock">
+          <img src="clock1.gif"/>
+          <div class="black">
+            <p>10:00</p>
+          </div>
         </div>
       </section>
     </main>
