Start of crono-logic

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <section class="main">
         <h1>The Hypnotizer</h1>
         <div class="inputs">
-          <input type="text" name="" id="" />
+          <input type="text" id="min" />
           <p>:</p>
-          <input type="text" name="" id="" />
+          <input type="text" id="sec" />
         </div>
         <div class="btn">
           <button>start</button>
