--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <section class="modal">
         <div class="x">X</div>
         <div class="clock">
-          <img src="clock1.gif"/>
+          <img/>
           <div class="black">
             <p></p>
           </div>
